# rusty_cv_creator

./: .env  .gitignore  .mcp.json  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  diesel.toml  env.sample  package.json  rusty-cv-config-example.ini  rusty-cv-config.ini  shell.nix  treefmt.toml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  bump.sh  release.yml  rust-tests.yml
docs/architecture/: atdd-infrastructure-policy.md
docs/evolution/: config-injection-evolution.md  cv-variant-build-evolution.md  template-source-evolution.md
docs/feature/ci-release-hardening/: environments.yaml  feature-delta.md
docs/feature/config-injection/: feature-delta.md
docs/feature/cv-variant-build/: feature-delta.md  roadmap.json
docs/feature/fix-3-page-cv-overflow/: rca.md
docs/product/: jobs.yaml
latex_template/: NewCVPiva.tex  PivaFrancescoCV.tex  awesome-cv-new.cls  awesome-cv.cls  fontawesome.sty
latex_template/cv-sections/: aboutme.tex  committees.tex  education.tex  experience-extended.tex  experience.tex  extracurricular.tex  fullexperience.tex  living.tex  skills.tex
latex_template/fonts/: FontAwesome.sty
migrations/2024-06-06-052525_cvs/: down.sql  up.sql
src/: README.md  cli_structure.rs  command_runner.rs  config_parse.rs  cv.rs  cv_insert.rs  database.rs  file_handlers.rs  global_conf.rs  helpers.rs  lib.rs  main.rs  models.rs  schema.rs  template_source.rs  user_action.rs
src/cv/: cv_main.rs  helpers.rs  preambles.rs  sections.rs
src/tui/: app.rs  db.rs  events.rs  mod.rs  probe.rs  state.rs  terminal_guard.rs  ui.rs
tests/: cli_smoke.rs  integration-tests.proptest-regressions  integration-tests.rs  template_source_scenarios.rs  tui_job_applications_scenarios.rs  tui_job_applications_specifications.rs
tests/tui_job_applications/: milestone_1_table_display.feature  milestone_2_navigation.feature  milestone_3_filter.feature  milestone_4_pdf_open.feature  walking_skeleton.feature
(+68 files in other folders)
