[dependencies]
chrono = "0.4.43"
clap = {version = "4.5.58", features = ["derive"]}
configparser = "3.1.0"
copy_dir = "0.1.3"
diesel = {version = "2.3.6", features = [
  "sqlite",
  "postgres",
  "returning_clauses_for_sqlite_3_35"
]}
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.9"
log = "0.4.29"
once_cell = "1.21.3"
skim = "1.9.0"

[dev-dependencies]
tempfile = "3.25.0"
serial_test = "3.3.1"

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(coverage)', 'cfg(tarpaulin_include)']}

[package]
name = "rusty_cv_creator"
version = "3.0.0"
edition = "2021"
authors = ["chess7th"]
license = "MIT"
