[dependencies]
chrono = "0.4.44"
clap = {version = "4.6.1", features = ["derive"]}
configparser = "3.1.0"
copy_dir = "0.1.3"
diesel = {version = "2.3.9", features = [
  "sqlite",
  "postgres",
  "returning_clauses_for_sqlite_3_35"
]}
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.10"
log = "0.4.30"
skim = "4.6.2"
ratatui = "0.30"
crossterm = "0.28"

[dev-dependencies]
serial_test = "3.5.0"
tempfile = "3.27.0"
proptest = "1.6"

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(coverage)']}

[package]
name = "rusty_cv_creator"
version = "5.1.1"
edition = "2021"
authors = ["chess7th"]
license = "MIT"
